--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -25,11 +25,11 @@ html,body{
   text-align: center;
   padding: 0 20px;
 }
-.main-title>header>a,
-.main-title>header>a:visited,
-.main-title>header>a:link,
-.main-title>header>a:active,
-.main-title>header>a:hover{
+.main-title>header a,
+.main-title>header a:visited,
+.main-title>header a:link,
+.main-title>header a:active,
+.main-title>header a:hover{
   color: inherit;
   text-decoration: none;
 }
