updated donate button

--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -165,6 +165,7 @@ html,body{
   text-align: center;
   display: block;
   margin: 0 auto;
+  padding-bottom: 1em;
 }
 .donate form{
   display: inline-block;
