--- a/static/app/resources/css/components.css
+++ b/static/app/resources/css/components.css
@@ -4,9 +4,10 @@
     */
 @font-face {
   font-family: 'Dressedless Three';
-  src: url('resources/fonts/Dressedless_Three.ttf')  format('truetype'), /* Safari, Android, iOS */
-  url('resources/fonts/Dressedless_Three.svg') format('svg'); /* Legacy iOS */
+  src: url('resources/fonts/Dressedless_Three.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('resources/fonts/Dressedless_Three.svg') format('svg'); /* Legacy iOS */
 }
+
 /*component*/
 /*https://github.com/tobiasahlin/SpinKit*/
 .spinner {
@@ -15,21 +16,30 @@
 }
 
 @-webkit-keyframes sk-rotateplane {
-  0% { -webkit-transform: perspective(120px) }
-  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+  0% {
+    -webkit-transform: perspective(120px)
+  }
+  50% {
+    -webkit-transform: perspective(120px) rotateY(180deg)
+  }
+  100% {
+    -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg)
+  }
 }
 
 @keyframes sk-rotateplane {
   0% {
     transform: perspective(120px) rotateX(0deg) rotateY(0deg);
     -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
-  } 50% {
-      transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-      -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
-    } 100% {
-        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-      }
+  }
+  50% {
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+  }
+  100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
 }
+
 /*end component*/
