added remove account

--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -217,7 +217,7 @@ html,body{
 .bookmark-user-modal .user-item:first-child{
   margin-top: 1rem;
 }
-.bookmark-user-modal .btn.sync{
+.bookmark-user-modal .user-list .btn{
   padding: .1rem .4rem;
 }
 
