--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -247,6 +247,8 @@ html,body{
   padding: 0 0 .2rem 0;
 }
 .bookmark-modal .repo-list {
+  padding-right: 0;
+  padding-left: 0;
   padding-bottom: 0;
 }
 .bookmark-modal .repo-group-item>.hd .dropdown-menu{
@@ -269,6 +271,18 @@ html,body{
 .bookmark-modal .repo-group-item[data-id="0"]>.hd .ctrl,
 .bookmark-modal .repo-group-item[data-id="0"] .group-menu .dropdown-menu>.dropdown-item:last-child{
   display: none;
+}
+.bookmark-modal .repo-group-item .repo-item{
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-radius: 0;
+}
+.bookmark-modal .repo-group-item .repo-item:last-child{
+  margin-bottom: 0;
+}
+.bookmark-modal .repo-group-item .repo-item .card-footer{
+  border-top: 0;
 }
 .bookmark-modal .tag-menu .add-repo .label{
   position: relative;
