--- a/static/app/resources/css/components.css
+++ b/static/app/resources/css/components.css
@@ -10,6 +10,7 @@
 
 /*component*/
 /*https://github.com/tobiasahlin/SpinKit*/
+/* spinner */
 .spinner {
   -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
   animation: sk-rotateplane 1.2s infinite ease-in-out;
@@ -41,5 +42,38 @@
     -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
   }
 }
+/*end spinner*/
+/*github-corner*/
+.github-corner svg {
+  transition: all 1s ease-in-out;
+}
+
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave {
+  0%, 100% {
+    transform: rotate(0deg)
+  }
+  20%, 60% {
+    transform: rotate(-25deg)
+  }
+  40%, 80% {
+    transform: rotate(10deg)
+  }
+}
+
+@media (max-width: 500px) {
+  .github-corner:hover .octo-arm {
+    animation: none
+  }
+
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
+  }
+}
+
+/*end github-corner*/
 
 /*end component*/
