--- a/static/app/scss/_donate.scss
+++ b/static/app/scss/_donate.scss
@@ -1,7 +1,8 @@
 .donate {
-  text-align: center;
   display: block;
   padding-bottom: 1rem;
+  margin-top: 1rem;
+  text-align: center;
   form {
     display: inline-block;
   }
