added highlight for keyword in searchcodes

--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -23,6 +23,9 @@ html, body {
 .jumbotron {
   margin-bottom: 0; }
 
+.highlight {
+  background-color: #FFFF88; }
+
 .modal-header .close {
   padding-left: .65rem; }
 
