--- a/static/app/scss/_util.scss
+++ b/static/app/scss/_util.scss
@@ -18,6 +18,9 @@
 .jumbotron{
   margin-bottom: 0;
 }
+.highlight {
+  background-color: #FFFF88;
+}
 .modal-header .close {
   padding-left: .65rem;
 }
