--- a/static/app/scss/style.scss
+++ b/static/app/scss/style.scss
@@ -3,6 +3,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
 }
 @import "util.scss";
+@import "animate.scss";
 @import "components.scss";
 @import "main.scss";
 @import "donate.scss";
