--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -1,5 +1,6 @@
 html, body {
   width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased; }
 
 .fix-break-word, p {
