--- a/static/app/scss/_main.scss
+++ b/static/app/scss/_main.scss
@@ -110,6 +110,16 @@
     }
   }
 }
+.react-native-training{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  padding: 1rem;
+  text-align: center;
+  background: #fff;
+}
 .popover--variable {
   background-color: transparent;
   border-left: 0;
