--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -69,6 +69,18 @@ html, body {
   -webkit-animation-duration: 2s;
           animation-duration: 2s; }
 
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 @-webkit-keyframes fadeInDown {
   from {
     opacity: 0;
@@ -88,6 +100,10 @@ html, body {
     opacity: 1;
     -webkit-transform: none;
             transform: none; } }
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+          animation-name: fadeIn; }
 
 .fadeInDown {
   -webkit-animation-name: fadeInDown;
@@ -273,7 +289,7 @@ html, body {
     .search-result .hd .logo {
       margin: 0 auto 1rem; }
 
-.react-native-training {
+.notice-link {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -282,6 +298,9 @@ html, body {
   padding: 1rem;
   text-align: center;
   background: #fff; }
+
+.notice-link a {
+  display: none; }
 
 .popover--variable {
   background-color: transparent;
