--- a/static/app/scss/_main.scss
+++ b/static/app/scss/_main.scss
@@ -55,11 +55,31 @@
     max-height: 300px;
     transition: all 250ms ease-in-out;
     overflow: hidden;
+
+    .label {
+      background-color: #373a3c;
+    }
   }
 }
 
 .search-form {
   padding: 1rem 0;
+  .input-group{
+    height: 44px;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+    transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    &:focus, &:active, &:hover {
+      box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.08);
+    }
+  }
+  input, button, a {
+    height: 44px;
+    line-height: 44px;
+    padding-top: 0;
+    padding-bottom: 0;
+    border: 0 !important;
+  }
   .dropdown-menu {
     max-height: 320px;
     overflow-y: scroll;
