updated title and desc

--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -252,7 +252,7 @@ html, body {
     transition: all 250ms ease-in-out;
     overflow: hidden; }
     .main-title h5 .label {
-      background-color: #373a3c; }
+      background-color: #71b7fd; }
 
 .search-form {
   padding: 1rem 0; }
