--- a/static/app/scss/style.scss
+++ b/static/app/scss/style.scss
@@ -2,6 +2,7 @@ html, body {
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
+  transition: all 350ms ease-in-out;
 }
 @import "util.scss";
 @import "animate.scss";
@@ -10,3 +11,8 @@ html, body {
 @import "donate.scss";
 @import "sourcecode.scss";
 @import "bookmark.scss";
+
+body.dark {
+  background: #272b38;
+  color: #fff;
+}
